--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Summarize information in your own words for better comprehension.</i></h2>
 	<h2> * <b>Regular Breaks </b>-  <i>Take detailed and organized notes during lectures and study sessions.
 Summarize information in your own words for better comprehension. </i></h2>
 	
-	
+	<img width=30% src="waste">
 
 	
 
