--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Summarize information in your own words for better comprehension.</i></h2>
 Summarize information in your own words for better comprehension. </i></h2>
 	
 	<img width=30% src="waste">
+	<img width=40% src="management">
 
 	
 
