added butterfly image

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<center><img width="50%" src="study 2"></center>
 	<h1><center><i>"Unlock Your Academic Potential with Proven Study Strategies!"</i></center></h1>
 	<h1> * Tip of the week : "Visualize your Success"<h1>
+	<img width=30% src="butterfly">
 
 	<h1><hr><center><i> STUDY TIPS CATEGORIES </i></center></hr></h1>
 	<h2 style="color: red;"><b><i>***NOTE: click on the pictures to see videos related to them.***</i></b></h2>
