--- a/index.html
+++ b/index.html
@@ -1,28 +1,5 @@
 <html>
-	<head><style>
-		.section{
-			margin:20px;
-			padding:10px;
-			border:3px solid #fff;
-			background color:#000000;
-					}
-			body{
-		background-image:url('bb.jpg.jpeg');
-		background-size:cover;
-		background-position:center;
-		background-repeat:no-repeat;
-}
-		body {
-            font-family: "Lucida Sans", "Lucida Grande",sans-serif ;
-            background-color: rgba(245, 249, 255, 0.8);
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-		
-		
-</style>
-	
+	<head>
 	<title> STUDY TIPS </title>
 	</head>
 	<body>
