--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 	<head>
 	<title> STUDY TIPS </title>
 	</head>
+	<style>
+body {
+	background-image: url('bb.jpg');
+	background-size:cover;
+	background-repeat:no-repeat;
+}
+</style>
 	<body>
 	<hr>
 	<hr> 
