--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ body {
 	
 	
 	<h2> Welcome to my space.I am <i>Santhi Latha Hanumanthu</i>.Whether you're here for information, inspiration, or just a friendly browse,I hope you find what you're looking for.Navigating the world of studies can be challenging,but fear not you're not alone.In this website i want to share some of the study tips which may help you in your preparation. </h2> 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/FsDa-lTjx0U?si=euQ7JKpCWL0-LQ5k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	click<a href="cse.html">here</a>
+	
 	<hr>
 	<hr>
 	
