--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 
 	<center><b><h1 style="color:red;">HTML</h1></b></center>
 	<h1>HTML stands for HyperText Markup Language. It is used to design web pages using a markup language. HTML is a combination of Hypertext and Markup language. Hypertext defines the link between web pages. A markup language is used to define the text document within the tag which defines the structure of web pages. This language is used to annotate (make notes for the computer) text so that a machine can understand it and manipulate text accordingly.</h1>
-	<img width=50% src="html">
+	<img width=50% src="hm">
 	<h1 style="color:skyblue;">Features of HTML</h1>
 	<h2>It is easy to learn and easy to use.</h2>
 	<h2>It is platform-independent.</h2>
