--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ body {
 	
 	
 	<h2> Welcome to my space.I am <i>Santhi Latha Hanumanthu</i>.Whether you're here for information, inspiration, or just a friendly browse,I hope you find what you're looking for.Navigating the world of studies can be challenging,but fear not you're not alone.In this website i want to share some of the study tips which may help you in your preparation. </h2> 
+click<a href="cse.html">here</a>
+	<a href="manasa-00.me"></a>
+	<a href="prasanna2210.me"></a>
 	<hr>
 	<hr>
 
