--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 	<head>
 	<title> STUDY TIPS </title>
@@ -20,9 +21,25 @@ body {
 	
 	
 	<h2> Welcome to my space.I am <i>Santhi Latha Hanumanthu</i>.Whether you're here for information, inspiration, or just a friendly browse,I hope you find what you're looking for.Navigating the world of studies can be challenging,but fear not you're not alone.In this website i want to share some of the study tips which may help you in your preparation. </h2> 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/FsDa-lTjx0U?si=euQ7JKpCWL0-LQ5k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	<hr>
 	<hr>
+	<img width="40%" src="paris">
+	<h1>Friends</h1>
+	<h1><a href="https://manasa-00.me/">MANASA</a></h1>
+	<h1><a href="https://prasanna2210.me/">PRASANNA</a></h1>
+	
+	<center><b><h1 style="color:red;">HTML</h1></b></center>
+	<h2>HTML stands for HyperText Markup Language. It is used to design web pages using a markup language. HTML is a combination of Hypertext and Markup language. Hypertext defines the link between web pages. A markup language is used to define the text document within the tag which defines the structure of web pages. This language is used to annotate (make notes for the computer) text so that a machine can understand it and manipulate text accordingly.</h2>
+	
+	<h1><section><i>Features of HTML</i></section></h1>
+	<h2>It is easy to learn and easy to use.</h2>
+	<h2>It is platform-independent.</h2>
+	<h2>Images, videos, and audio can be added to a web page.</h2>
+	<h2>Hypertext can be added to the text.</h2>
+	<h2>It is a markup language.</h2>
+	click<a href="cse.html">here</a>
+	
+	
 	
 	
 	
