--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ body {
 	<hr>
 	<hr>
     <h1>PARIS</h1>
+	<h2>Favourite place</h2>
 	<img width="50" src="paris">
 	<h1>Friends</h1>
 	<h1><a href="https://manasa-00.me/">MANASA</a></h1>
