--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 	<h2> Welcome to my space.I am <i>Santhi Latha Hanumanthu</i>.Whether you're here for information, inspiration, or just a friendly browse,I hope you find what you're looking for.Navigating the world of studies can be challenging,but fear not you're not alone.In this website i want to share some of the study tips which may help you in your preparation. </h2> 
 	<hr>
 	<hr>
-	<img width="40%" src="paris">
+        <img width=50% src="kannaya">
 	<h1>Friends</h1>
 	<h1><a href="https://manasa-00.me/">MANASA</a></h1>
 	<h1><a href="https://prasanna2210.me/">PRASANNA</a></h1>
