--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ body {
     <img width=50% src="kannaya">
     <h1>PARIS</h1>
 	<h2>Favourite place</h2>
-
->>>>>>> 16d39b258b8e2eb1c15d259e9b2eea390e3edd74
+    <img width="40%" src="brindhavan">
+     
 	<h1>Friends</h1>
 	<h1><a href="https://manasa-00.me/">MANASA</a></h1>
 	<h1><a href="https://prasanna2210.me/">PRASANNA</a></h1>
