--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
     <img width=50% src="kannaya">
     <h1>PARIS</h1>
 	<h2>Favourite place</h2>
-    
+    <img width="50%" src="brindhavan">
      
 	<h1>Friends</h1>
 	<h1><a href="https://manasa-00.me/">MANASA</a></h1>
