--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ body {
 	<h2> Welcome to my space.I am <i>Santhi Latha Hanumanthu</i>.Whether you're here for information, inspiration, or just a friendly browse,I hope you find what you're looking for.Navigating the world of studies can be challenging,but fear not you're not alone.In this website i want to share some of the study tips which may help you in your preparation. </h2> 
 	<hr>
 	<hr>
-    <img width="50%" src="brindhavan">
+
     <img width=50% src="kannaya">
     <h1>PARIS</h1>
 	<h2>Favourite place</h2>
-    <img width="50%" src="brindhavan">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pqZOHOstq8I?si=JsCqofDazKlR33uE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
      
 	<h1>Friends</h1>
 	<h1><a href="https://manasa-00.me/">MANASA</a></h1>
