--- a/cse.html
+++ b/cse.html
@@ -6,6 +6,6 @@
     <body>
         <h1>HTLML VIDEO</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/FsDa-lTjx0U?si=N4VforfL1c2BnLQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <a href="https://youtu.be/FsDa-lTjx0U?si=ltMF5SNdW8RmO7W2">go to home</a>
+        <a href="https://youtu.be/FsDa-lTjx0U?si=ltMF5SNdW8RmO7W2">video</a>
     </body>
 </html>
